Changed and cleaned up libraries, added materialze

--- a/index.html
+++ b/index.html
@@ -6,26 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <!-- Style Reset for Browswer Compatibility -->
+    <link rel="stylesheet" type="text/css" href="reset.css">
     <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/5.3.1/firebase.js"></script>
+    <!-- MATERIALIZE -->
+        <!-- Compiled and minified CSS -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
+        <!-- Compiled and minified JavaScript -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
+    <!-- jquery  -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+     <!-- Our Specific CSS -->
+     <link rel="stylesheet" type="text/css" href="style.css">
 
-    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 
-    <title>Project One</title>
+    <title>Decision Decider - Project One</title>
 </head>
 
 <body>
 
-    <!-- jquery  -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
- 
-    <script src="app.js">
-    </script>
 
+
+
+
+    
+ 
+    <script src="app.js"></script>
 </body>
 
 </html>
