APIs ready to go, havig trouble with google maps

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 </head>
 
 <body>
+    <div id="map"></div>
     <div class="container" style="border: 2px solid grey">
 
         <form>
@@ -131,6 +132,9 @@
 
     </div>
     <script src="app.js"> </script>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5r_QuTaaCHb-d0DBHlVBzB3rEtHJKt_o&callback=initMap">
+    </script>
 </body>
 
 </html>
