Added map script

--- a/index.html
+++ b/index.html
@@ -146,16 +146,23 @@
         </div>
         <!-- row for the searched locations -->
         <div class="row">
-            <div class="col-sm">
+            <div class="col-sm-6">
                 <label for="formGroupExampleInput2">Location results</label>
-                <div id="location-Result">
-                    <!-- To Do -->
-                </div>
+                <div id="location-Result"> Pull the restaurant result </div>
+
+            </div>
+            <div class="col-sm-6">
+                <div id="map"></div>
+                <!-- To Do -->
             </div>
         </div>
     </div>
 
+    </div>
+
     <script src="app.js"> </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5r_QuTaaCHb-d0DBHlVBzB3rEtHJKt_o">
+    </script>
 </body>
 
 </html>
