map, apis working

--- a/index.html
+++ b/index.html
@@ -131,10 +131,9 @@
         </div>
 
     </div>
-    <script src="app.js"> </script>
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5r_QuTaaCHb-d0DBHlVBzB3rEtHJKt_o&callback=initMap">
-    </script>
+    <script src="app.js"></script>
+     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5r_QuTaaCHb-d0DBHlVBzB3rEtHJKt_o">
+     </script>
 </body>
 
 </html>
