--- a/index.html
+++ b/index.html
@@ -170,6 +170,9 @@
                     <div class="col-sm-6">
                         <label for="formGroupExampleInput2">Location results</label>
                         <div id="location-Result"> Pull the restaurant result </div>
+                        <div id="restarauntImages">
+
+                        </div>
                     </div>
                     <div class="col-sm-6">
                         <div id="map"></div>
