Reconciling more changes

--- a/index.html
+++ b/index.html
@@ -103,18 +103,14 @@
                             <br>
                             <select class="dropdown" id="user2cd-Choice2"></select>
                             <br>
-                            <input type="submit" id="submit">
+                            <input type="submit" id="submitUserChoice">
                         </div>
                     </div>
                 </form>
             </div>
         </div>
     </div>
-    <div class="container rounded" id="userChoiceFormTwo" style="display: none;">
 
-        <!-- User 1 inputs -->
-
-    </div>
     </div>
     </div>
 
@@ -123,22 +119,12 @@
         <!-- row for the food type result -->
         <div class="row">
             <div class="col-sm-6" id="user-result-body">
-                <div class="row">
-                    <div class="col-sm-12">
-                        <label for="formGroupExampleInput2">Food type selected</label>
-                        <span>
-                            <h1 id="food-Decision"></h1>Your food result goes here</span>
-                    </div>
+                <label for="formGroupExampleInput2">Location results</label>
+                <div id="location-Result"> Pull the restaurant result
                 </div>
-                <!-- row for the searched locations -->
-                <div class="row">
-                    <div class="col-sm-6">
-                        <label for="formGroupExampleInput2">Location results</label>
-                        <div id="location-Result"> Pull the restaurant result </div>
-                    </div>
-                    <div class="col-sm-6">
-                        <div id="map"></div>
-                    </div>
+            </div>
+            <div class="col-sm-6">
+                <div id="map">
                 </div>
             </div>
         </div>
