--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
                         <div class="panel-heading">
 
                             <p>Tell us about where you are, and where you'll drive:</p>
-                        
+
                         </div>
-                        <div class="panel-body"><form id='top-form'>
+                        <div class="panel-body">
+                            <form id='top-form'>
                                 <!-- Location zip -->
                                 <div class="form-group">
                                     <label for="zipInput">Location</label>
@@ -134,11 +135,13 @@
             </div>
         </div>
     </div>
-    <div class="container rounded" id="userChoiceFormTwo" style="display: none;">
 
-        <!-- User 1 inputs -->
-        <!--User 2 inputs  -->
-
+    <!-- Coin flip div -->
+    <div class="coinbody" id="coinDisplay" style="display: none;">
+        <div id="coin">
+            <div class="side-a"></div>
+            <div class="side-b"></div>
+        </div>
     </div>
 
     <!-- Search results to be displayed -->
