Finalizing first-draft styling.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                     <input type="text" class="form-control" id="distance" placeholder="How far are you willing to travel? (in miles)">
                                 </div>
 
-                                <button type="submit" id="submitZipCode" class="btn btn-dark">Submit</button>
+                                <button type="submit" id="submitZipCode" class="btn btn-dark"><span class="alltxt">Submit</span></button>
 
                             </form>
                         </div>
@@ -80,30 +80,32 @@
                 <form>
                     <div class="row">
                         <div class="col-sm-6" id='left-form'>
+                            <h3>Second user:<br>Tell us what you'd prefer:</h3>
+                            <p>(Your first choice will weigh more heavily)</p>
                             <!-- Dropdown for user1: input #1 -->
-                            <label for "user1-Choice1">Select your 1st choice</label>
-                            <br>
+                            <label class="dd-label" for "user1-Choice1"><p>Select your 1st choice:</p></label>
                             <select class="dropdown" id="user1-Choice1"></select>
                             <br>
                             <!-- Dropdown for user1: input #2 -->
-                            <label for "user1-Choice2">Select your 2nd choice</label>
-                            <br>
+                            <label class="dd-label" for "user1-Choice2"><p>Select your 2nd choice:</p></label>
                             <select class="dropdown" id="user1-Choice2"></select>
                             <br>
+                            <!-- <input type="submit" id="submitUserChoice"> -->
+                            <button type="submit" id="submitUserChoice" class="btn btn-dark"><span class="alltxt">Pick for us!</span></button>
                         </div>
 
 
                         <div class="col-sm-6" id='right-form'>
                             <!--User 2 inputs  -->
-                            <label for "user2-Choice1">Select your 1st choice</label>
-                            <br>
+                            <h3>First user: Let us know your food preferences!</h3>
+                            <p>(Your first choice will weigh more heavily)</p>
+                            <label class="dd-label" for "user2-Choice1"><p>Select your 1st choice:</p></label>
                             <select class="dropdown" id="user2-Choice1"></select>
                             <br>
-                            <label for "user2-Choice2">Select your 2nd choice</label>
-                            <br>
+                            <label class="dd-label" for "user2-Choice2"><p>Select your 2nd choice:</p></label>
                             <select class="dropdown" id="user2cd-Choice2"></select>
                             <br>
-                            <input type="submit" id="submitUserChoice">
+                            
                         </div>
                     </div>
                 </form>
@@ -118,13 +120,17 @@
     <div class="container rounded" id="userResult" style="display: none;">
         <!-- row for the food type result -->
         <div class="row">
-            <div class="col-sm-6" id="user-result-body">
-                <label for="formGroupExampleInput2">Location results</label>
-                <div id="location-Result"> Pull the restaurant result
+            <div class="col-sm-6">
+                <div id="user-result-body">
+                    <label for="formGroupExampleInput2"><p>Location results</p></label>
+                    <div id="location-Result"> <p>Pull the restaurant result</p>
+                    </div>
                 </div>
             </div>
             <div class="col-sm-6">
-                <div id="map">
+                <div id="map-holder">
+                    <div id="map">
+                    </div>
                 </div>
             </div>
         </div>
