--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="row">
             <!-- <div class="col-sm-1">
             </div> -->
-            <div class="col-sm-6">
+            <div class="col-sm-6" id="slide-left">
                 <div id="welcome-left">
                     <h3>THE GREAT FOOD FEUD:</h3>
                     <div class="panel panel-default">
@@ -44,7 +44,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-6" id="slide-left">
                 <div id="welcome-right">
                     <div class="panel panel-default">
                         <div class="panel-heading">
